--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
-  "name": "myapp",
+  "name": "crud-node",
   "version": "0.0.0",
   "private": true,
+  "keywords": [
+    "crud",
+    "node",
+    "typescript",
+    "https",
+    "csrf"
+  ],
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon dist/bin/www.js",
+    "build": "pm2 start dist/bin/www.js",
+    "tsc-w": "tsc --watch",
+    "tsc": "tsc",
+    "debug": "nodemon ./dist/bin/www",
+    "dev": "concurrently --kill-others 'npm run tsc-w' 'npm run debug'"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.3",
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.16.3",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/csurf": "^1.9.33",
+    "@types/express": "^4.0.35",
+    "@types/express-session": "^1.15.0",
+    "@types/morgan": "^1.7.32",
+    "concurrently": "^3.4.0",
     "nodemon": "^1.11.0",
     "typescript": "^2.3.3"
   }
