--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
+    "mongodb": "^2.2.27",
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
@@ -34,6 +35,7 @@
     "@types/csurf": "^1.9.33",
     "@types/express": "^4.0.35",
     "@types/express-session": "^1.15.0",
+    "@types/mongodb": "^2.2.2",
     "@types/morgan": "^1.7.32",
     "concurrently": "^3.4.0",
     "nodemon": "^1.11.0",
