--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "boom": "^5.1.0",
     "cookie-parser": "~1.4.3",
+    "crypto": "0.0.3",
     "csurf": "^1.9.0",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
     "mongodb": "^2.2.27",
+    "mongoose": "^4.10.4",
     "morgan": "~1.8.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
   },
